# Rusty

./: .gitignore  Cargo.toml
Rust HW01/area/src/: main.rs
Rust HW01/list_player/: Cargo.toml
Rust HW01/temperature/: Cargo.toml
Rust HW01/temperature/src/: main.rs
Rust HW02/arrow/: Cargo.toml
Rust HW02/grade/: Cargo.toml
Rust HW02/temptable/: Cargo.toml
Rust HW03/c_temp/: Cargo.toml
Rust HW03/make_arrow/: Cargo.toml
Rust HW04/: Cargo.toml
Rust HW05/: Cargo.toml
Rust HW06/: Cargo.toml
Rust HW06/tests/: cli.rs
Rust practice/prac01/: Cargo.toml
Rust_HW06/: Cargo.toml
Rust_HW09/: Cargo.toml
Rust_HW09/src/: lib.rs
Rust_HW10/: 2_1.html  2_2.html  Cargo.toml
Rust_HW10/src/: lib.rs
Rust_HW11/: Cargo.toml
Rust_HW7/: Cargo.toml  input.csv  output.html
Rust_HW7/src/: lib.rs  main.rs
Rust_HW8/: Cargo.toml  average_areas.csv  average_areas.html  average_areas_max_min.html  layers2_1.csv
Rust_HW8/src/: lib.rs
SysMonitor/: Cargo.toml
SysMonitor/src/: args.rs  lib.rs  main.rs
SysMonitor/src/widgets/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  sys_information.rs  temperature.rs
area/tests/: cli.rs
commr/src/: lib.rs
grepr/src/: lib.rs
lab01/: Cargo.toml
lab01/tests/: cli.rs
lab05/count_digits/: Cargo.toml
lab10/: Cargo.toml
lab10/src/: lib.rs  main.rs
lab11/src/: lib.rs  main.rs
lab6/exercises/: Cargo.toml
lab7/: Cargo.toml
lab7/src/: lib.rs
lab7findr/src/: lib.rs
lab9/: Cargo.toml
lab9/src/: lib.rs  main.rs
prac/: Cargo.toml
prac/src/: lib.rs  main.rs
practice/: Cargo.toml
practice/src/: main.rs
(+15 files in other folders)
