[package]
name = "SysMonitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

crossterm = "0.25"
sysinfo = "0.29.10"
tokio = { version = "1.12", features = ["full"] }
termion = "1.5"
tui = { version = "0.19", default-features = false, features = ['termion'] }
rand = "0.8"
procfs = "0.6"
clap = "2.33"
plotters = "0.3.5"